# reCOM

./: .gitignore  CMakeLists.txt  README.md  ZIEngine.sln  engine.vcxproj  engine.vcxproj.filters  game.vcxproj  game.vcxproj.filters  imgui.ini  premake5.lua  reCOM.sln
data/ui/: hype_lib.rdr  ld12_lib.rdr  ld15_lib.rdr  ld21_lib.rdr  lmp1_lib.rdr  lmp5_lib.rdr  lmp6_lib.rdr  mission.rdr  mm05_lib.rdr  mm09_lib.rdr  mm16_lib.rdr  test_lib.rdr  uici_lib.rdr
data/zrdr/: dlgTest.rdr  global_valves.rdr  settings.rdr  sndjukeboxm.rdr  test_load_texture.rdr  test_text.rdr
lib/: SDL3.lib  SDL3_ttf.lib  glfw3.lib
scripts/readers/: dynamics.rdr  global_valves.rdr  sndjukeboxm.rdr  vehicles.rdr
src/: game_main.cpp  main.cpp  placeholder.h  zgame.cpp  zgame.h
src/GameZ/: game_main.cpp  zgame.h
src/ai/: ai_main.cpp  ai_main.h
src/anim/: anim_main.cpp  anim_main.h
src/audio/: zsnd_csnd.cpp  zsnd_csnd.h
src/entity/: body.h  ent_main.cpp  ent_main.h  zwep_ammo.cpp  zwep_ammo.h  zwep_weapon.cpp  zwep_weapon.h
src/fts/: fts.h
src/game/: game_main.cpp  zgame.h
src/gamez/: game_engine.cpp  game_main.cpp
src/input/: input_main.cpp  input_main.h
src/math/: zmath_main.cpp  zmath_main.h
src/network/: zNetMedius.cpp  znet_main.h
src/node/: node_main.cpp  node_main.h  node_world.cpp  node_world.h
src/reader/: zrdr_file.cpp  zrdr_main.cpp  zrdr_main.h  zrdr_parse.cpp  zrdr_parse.h
src/render/: zrnd_main.h
src/rt/: rtarray.h
src/system/: zsys_main.h  zsys_memory.cpp
src/tests/: tests.h
src/texture/: ztex_main.h
src/ui/: zui.cpp  zui_2d.cpp  zui_main.h
(+1768 files in other folders)
